style.css
@font-face {
	font-family: Bold;
	src: url("Oxygen/Oxygen-Bold.ttf");
}

@font-face {
  font-family: Regular;
  src: url("Oxygen/Oxygen-Regular.ttf");
}

@font-face {
  font-family: Light;
  src: url("Oxygen/Oxygen-Light.ttf");
}

h1 {
  color: white;
}

@media screen and (max-width: 767px) {
  h1 {
    font-size: 10vw;
  }
}

@media screen and (min-width: 768px) {
  h1 {
    font-size: 6vw;
  }
}

@media screen and (min-width: 992px) {
  h1 {
    font-size: 4vw;
  }
}

h2 {
  color: white;
}

@media screen and (max-width: 767px) {
  h2 {
    font-size: 5vw;
  }
}

@media screen and (min-width: 768px) {
  h2 {
    font-size: 3.5vw;
  }
}

@media screen and (min-width: 992px) {
  h2 {
    font-size: 2.5vw;
  }
}

h3 {
  color: white;
}

@media screen and (max-width: 767px) {
  h3 {
    font-size: 6vw;
  }
}

@media screen and (min-width: 768px) {
  h3 {
    font-size: 4.25vw;
  }
}

@media screen and (min-width: 992px) {
  h3 {
    font-size: 3vw;
  }
}

h4 {
  color: black;
}

@media screen and (max-width: 767px) {
  h4 {
    font-size: 3.75vw;
  }
}

@media screen and (min-width: 768px) {
  h4 {
    font-size: 2.75vw;
  }
}

@media screen and (min-width: 992px) {
  h4 {
    font-size: 1.75vw;
  }
}

hr {
  border: 1px solid white;
  margin: 20px 0;
  border-radius: 10px;
}

form {
  color: black;
}

@media screen and (max-width: 767px) {
  form {
    font-size: 3.5vw;
  }
}

@media screen and (min-width: 768px) {
  form {
    font-size: 2vw;
  }
}

@media screen and (min-width: 992px) {
  form {
    font-size: 1.5vw;
  }
}

@media screen and (max-width: 767px) {
  form p {
    font-size: 5vw;
    line-height: 5.5vw;
  }
}

@media screen and (min-width: 768px) {
  form p {
    font-size: 3.5vw;
    line-height: 4vw;
  }
}
@media screen and (min-width: 992px) {
  form p {
    font-size: 3vw;
    line-height: 3.5vw;
  }
}

input[type="text"] {
  margin: 1%;
  font-size: auto;
}

.bold {
  font-family: Bold;
}

.regular {
  font-family: Regular;
}

.light {
  font-family: Light;
}

.centered {
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.padded-big {
  padding: 5%;
}

.padded-small {
  padding: 1%;
}

.my-button {
  font-family: Light;
  background: rgba(255, 255, 255, 0.8);
  padding-bottom: 0.75%;
  margin-bottom: 2%;
  padding-left: 5%;
  padding-right: 5%;
  border: none;
  box-shadow: 0px 3px 10px rgb(100, 100, 100);
  border-radius: 5px;
  border-bottom: 3px solid gray;
  cursor: pointer;
}

.my-button:hover {
  background-color: white;
  box-shadow: 0px 3px 10px rgb(80, 80, 80);
}

.my-button:active {
  box-shadow: none;
  transform: translateY(2px);
  border-top: 1px solid white;
  border-bottom: 2px solid gray;
}

.my-button:focus {
  outline: 0;
}

@media screen and (max-width: 575px) {
  .my-button {
    padding-top: 2%;
  }
}

@media screen and (min-width: 576px) {
  .my-button {
    padding-top: 1.5%;
  }
}

@media screen and (min-width: 768px) {
  .my-button {
    padding-top: 1%;
  }
}

@media screen and (min-width: 992px) {
  .my-button {
    padding-top: 1%;
  }
}

.puzzle {
  background-color: rgba(255, 255, 255, 0.4);
  padding-left: 10%;
  padding-right: 10%;
  display: block;
}

.indented {
  text-indent: 5%;
}

.form-div {
  width: 70%;
  padding: 40px;
  background-color: rgba(255, 255, 255, 0.4);
  box-shadow: 0 0 20px gray;
}

.form-box {
  font-family: Light;
  border: none;
  border-bottom: 3px solid #5F84D8;
  padding: 0.5% 1%;
  width: 80%;
}

.form-box:focus {
  outline: none;
  box-shadow: 1px 0px 5px gray;
}

@media screen and (max-width: 767px) {
  .form-box {
    font-size: 4.5vw;
  }
}

@media screen and (min-width: 768px) {
  .form-box {
    font-size: 3vw;
  }
}

@media screen and (min-width: 992px) {
  .form-box {
    font-size: 2vw;
  }
}

#background-img {
  background: url("Media/background.png") no-repeat center top fixed;
  background-color: #B7CDFF;
  background-size: cover;
  padding-bottom: 10%;
}

#header-img {
  height: 10em;
  cursor: pointer;
}

#header-img:hover {
  opacity: 0.8;
}

@media screen and (max-width: 767px) {
    #header-img{
    	background: url("Media/life_narrow.png") no-repeat center;
      background-size: contain;
    }
}

@media screen and (min-width: 768px) {
    #header-img{
    	background: url("Media/life_wide.png") no-repeat center;
      background-size: contain;
    }
}

#car-gif {
  height: 15em;
  background: white url("Media/car.gif") no-repeat center;
  background-size: auto;
}

#yay-gif {
  height: 10em;
  background: white url("Media/congrats.gif") space center;
  background-size: auto;
}

#reminder {
  margin-top: -2%;
  padding-bottom: 5%;
}

#hint {
  padding-top: 5%;
}

#hint-button {
  margin-top: 5%;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

